# newlib

./: config.sub
newlib/: configure.host
newlib/libc/sys/sel4/: .directory  Makefile.am  Makefile.in  configure  syscall.c  syscall.h  syscalls.c
newlib/libc/sys/sel4/32/build-newlib/: Makefile
newlib/libc/sys/sel4/build-newlib/: Makefile
newlib/libc/sys/sel4/build-newlib/doc/: Makefile
newlib/libc/sys/sel4/build-newlib/etc/: Makefile
newlib/libc/sys/sel4/build-newlib/libc/: Makefile
newlib/libc/sys/sel4/build-newlib/libm/: Makefile
newlib/libc/sys/sel4/close/: close.c
newlib/libc/sys/sel4/environ/: environ.c
newlib/libc/sys/sel4/execve/: execve.c
newlib/libc/sys/sel4/exit/: exit.c
newlib/libc/sys/sel4/fork/: fork.c
newlib/libc/sys/sel4/fstat/: fstat.c
newlib/libc/sys/sel4/getpid/: getpid.c
newlib/libc/sys/sel4/gettimeofday/: gettimeofday.c
newlib/libc/sys/sel4/includes/: errno.h  features.h  futex.h  libc.h  posix.h  pthread_impl.h  syscall.h  unistd.h
newlib/libc/sys/sel4/includes/sys/: time.h
newlib/libc/sys/sel4/isatty/: isatty.c
newlib/libc/sys/sel4/kill/: kill.c
newlib/libc/sys/sel4/link/: link.c
newlib/libc/sys/sel4/lseek/: lseek.c
newlib/libc/sys/sel4/open/: open.c
newlib/libc/sys/sel4/read/: read.c
newlib/libc/sys/sel4/sbrk/: sbrk.c
newlib/libc/sys/sel4/stat/: stat.c  stat.h
newlib/libc/sys/sel4/times/: time.c  time.h  times.c
newlib/libc/sys/sel4/unlink/: unlink.c
newlib/libc/sys/sel4/wait/: wait.c  wait.h
newlib/libc/sys/sel4/write/: write.c
newlib/libc/sys/sel4/x32/build-newlib/: Makefile
(+949 files in other folders)
